[gd_scene load_steps=17 format=3 uid="uid://bno2xbu6glsda"]

[ext_resource type="Script" path="res://assets/scenes/play/play.gd" id="1_akjwt"]
[ext_resource type="Texture2D" uid="uid://c6r56ld3oodpn" path="res://assets/scenes/play/altimeter.png" id="2_0bli0"]
[ext_resource type="PackedScene" uid="uid://b7ox6dqdj462r" path="res://assets/gui/gui_popup.tscn" id="3_qwtvq"]
[ext_resource type="Texture2D" uid="uid://dh2nmuvqyu71o" path="res://assets/particles/particles_flame.png" id="4_lmkm3"]
[ext_resource type="Texture2D" uid="uid://4lkve7vna8pq" path="res://assets/props/swing_set/swing_set_thrusters.png" id="4_qkpg4"]
[ext_resource type="Texture2D" uid="uid://cthcf706j8l2c" path="res://assets/props/floater/floater.png" id="6_ahxht"]
[ext_resource type="Texture2D" uid="uid://dg47idjo5mkbe" path="res://assets/main/mykoala_0.png" id="7_fn26f"]
[ext_resource type="AudioStream" uid="uid://db4xmupymq742" path="res://assets/sounds/clapping.mp3" id="8_p4dbt"]
[ext_resource type="AudioStream" uid="uid://d2q0b8gbgajr3" path="res://assets/sounds/bell.mp3" id="9_5amts"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ver"]
atlas = ExtResource("2_0bli0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn7pv"]
atlas = ExtResource("2_0bli0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb7o3"]
atlas = ExtResource("2_0bli0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywpfs"]
atlas = ExtResource("2_0bli0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxshh"]
atlas = ExtResource("4_lmkm3")
region = Rect2(0, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g4cr"]
atlas = ExtResource("4_qkpg4")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eaab"]
atlas = ExtResource("6_ahxht")
region = Rect2(256, 0, 256, 256)

[node name="play" type="Node2D"]
script = ExtResource("1_akjwt")

[node name="gui" type="CanvasLayer" parent="."]

[node name="info" type="Label" parent="gui"]
offset_right = 40.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 32
text = "Attempt #0
Distance: "

[node name="altimeter" type="Control" parent="gui"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="nine_patch_rect" type="NinePatchRect" parent="gui/altimeter"]
layout_mode = 0
offset_left = -973.0
offset_top = 122.0
offset_right = -941.0
offset_bottom = 393.0
texture = ExtResource("2_0bli0")
region_rect = Rect2(440, 16, 16, 96)
patch_margin_top = 16
patch_margin_bottom = 16
axis_stretch_vertical = 1

[node name="max" type="TextureRect" parent="gui/altimeter/nine_patch_rect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = -47.0
offset_right = 61.0
offset_bottom = 81.0
grow_horizontal = 2
pivot_offset = Vector2(64, 64)
texture = SubResource("AtlasTexture_a3ver")

[node name="min" type="TextureRect" parent="gui/altimeter/nine_patch_rect"]
layout_mode = 0
offset_left = -49.0
offset_top = 193.0
offset_right = 79.0
offset_bottom = 321.0
pivot_offset = Vector2(64, 64)
texture = SubResource("AtlasTexture_kn7pv")

[node name="player" type="TextureRect" parent="gui/altimeter/nine_patch_rect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -326.465
offset_right = 63.0
offset_bottom = -198.465
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(64, 64)
texture = SubResource("AtlasTexture_yb7o3")
stretch_mode = 3

[node name="results_overlay" type="ColorRect" parent="gui"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.796652, 0.766556, 0.77416, 0.670588)

[node name="results_container" type="Control" parent="gui"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="Panel" parent="gui/results_container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.1
anchor_right = 0.875
anchor_bottom = 0.9

[node name="top" type="Panel" parent="gui/results_container/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.05
anchor_right = 0.875
anchor_bottom = 0.15
grow_horizontal = 2

[node name="title" type="Label" parent="gui/results_container/panel/top"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "The results are in!"
horizontal_alignment = 1

[node name="content" type="Panel" parent="gui/results_container/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.2
anchor_right = 0.875
anchor_bottom = 0.8
grow_horizontal = 2

[node name="stats_left" type="Label" parent="gui/results_container/panel/content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "Distance
Altitude
Velocity
Injuries
Insurance"

[node name="stats_middle" type="Label" parent="gui/results_container/panel/content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "0 meters
0 meters
0 meters/sec
Nothing Hurts
"
horizontal_alignment = 1

[node name="stats_right" type="Label" parent="gui/results_container/panel/content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "+$0.00
+$0.00
+$0.00
-$0.00
+$0.00"
horizontal_alignment = 2

[node name="panel" type="Panel" parent="gui/results_container/panel/content"]
modulate = Color(1, 1, 0.760784, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="total_left" type="Label" parent="gui/results_container/panel/content/panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "Total Earned"
vertical_alignment = 1

[node name="total_right" type="Label" parent="gui/results_container/panel/content/panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "$0.00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="continue" type="Button" parent="gui/results_container/panel"]
modulate = Color(0.807843, 1, 0.729412, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.825
anchor_right = 0.8
anchor_bottom = 0.976
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Continue to the Shop"

[node name="instructions" type="Control" parent="gui"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="instruction_0" parent="gui/instructions" instance=ExtResource("3_qwtvq")]
visible = false
layout_mode = 1

[node name="dismiss" type="Label" parent="gui/instructions/instruction_0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "(Press any key to dismiss)"
horizontal_alignment = 1
vertical_alignment = 2

[node name="text" type="Label" parent="gui/instructions/instruction_0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Welcome to Learn to Swing!
Swing big distances to earn money and pay for college!

[A] and [D] to Swing
[Space] to Jump
[A] and [D] to Turn in the Air"
horizontal_alignment = 1
autowrap_mode = 2

[node name="texture_rect" type="TextureRect" parent="gui/instructions/instruction_0"]
layout_mode = 0
offset_left = 244.2
offset_top = 270.4
offset_right = 372.2
offset_bottom = 398.4
texture = SubResource("AtlasTexture_ywpfs")

[node name="instruction_1" parent="gui/instructions" instance=ExtResource("3_qwtvq")]
visible = false
layout_mode = 1

[node name="dismiss" type="Label" parent="gui/instructions/instruction_1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "(Press any key to dismiss)"
horizontal_alignment = 1
vertical_alignment = 2

[node name="text" type="Label" parent="gui/instructions/instruction_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "


While Swinging, use [Space] to activate any equipped Thruster!
Once activated, use [Space] again to Jump!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="texture_rect_2" type="TextureRect" parent="gui/instructions/instruction_1"]
layout_mode = 0
offset_left = 120.2
offset_top = 266.4
offset_right = 376.2
offset_bottom = 394.4
texture = SubResource("AtlasTexture_lxshh")

[node name="texture_rect" type="TextureRect" parent="gui/instructions/instruction_1/texture_rect_2"]
layout_mode = 0
offset_left = 189.0
offset_top = -36.0
offset_right = 317.0
offset_bottom = 92.0
texture = SubResource("AtlasTexture_3g4cr")

[node name="instruction_2" parent="gui/instructions" instance=ExtResource("3_qwtvq")]
visible = false
layout_mode = 1

[node name="dismiss" type="Label" parent="gui/instructions/instruction_2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "(Press any key to dismiss)"
horizontal_alignment = 1
vertical_alignment = 2

[node name="text" type="Label" parent="gui/instructions/instruction_2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "


While Airborne, use [Space] to activate any equipped Safety Mechanism!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="texture_rect_2" type="TextureRect" parent="gui/instructions/instruction_2"]
layout_mode = 0
offset_left = 182.2
offset_top = 148.4
offset_right = 438.2
offset_bottom = 404.4
texture = SubResource("AtlasTexture_0eaab")

[node name="instruction_3" parent="gui/instructions" instance=ExtResource("3_qwtvq")]
visible = false
layout_mode = 1

[node name="dismiss" type="Label" parent="gui/instructions/instruction_3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "(Press any key to dismiss)"
horizontal_alignment = 1
vertical_alignment = 2

[node name="text" type="Label" parent="gui/instructions/instruction_3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "You got College Education!

Thank you for playing!
sincerely, mykoala"
horizontal_alignment = 1
autowrap_mode = 2

[node name="texture_rect_2" type="TextureRect" parent="gui/instructions/instruction_3"]
layout_mode = 0
offset_left = 238.2
offset_top = 197.4
offset_right = 494.2
offset_bottom = 453.4
scale = Vector2(0.55, 0.55)
texture = ExtResource("7_fn26f")

[node name="sounds" type="Node" parent="."]

[node name="clapping" type="AudioStreamPlayer" parent="sounds"]
process_mode = 3
stream = ExtResource("8_p4dbt")
volume_db = -0.995

[node name="bell" type="AudioStreamPlayer" parent="sounds"]
process_mode = 3
stream = ExtResource("9_5amts")
volume_db = -5.971
pitch_scale = 0.87
